--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
         </ul>
       </div>
       
+      <div class="edu">
+        <h3 class="title">Education</h3>
+        <div class="edu_item">
+          <p class="item_preTitle">2018-2022</p>
+          <h4 class="item_title">Junior Specialist</h4>
+          <p class="item_subtitle">
+            College CHNu
+          </p>
+        </div>
+      </div>
+    </div>
     <hr>
     
   </div>
