--- a/index.html
+++ b/index.html
@@ -107,13 +107,19 @@
           </div>
         </div>
 
-        
-
-    </div>
-
+        <div class="why" style="margin-top: 70px; max-width: 330px;">
+          <div>
+            <h3 class="item_title" style="color:rgb(113, 113, 113);">
+              Chess and Boxing are actually very similar,
+              there is no luck involved, and either you win or lose
+              if you lose that means that at some point in the time 
+              you made a mistake. You have no one to blame but yourself.
+            </h3>
+          </div>
+        </div>
+      </div>
     </div>
     <hr>
-
   </div>
 </body>
 
